[package]
authors = ["Borlaug"]
build = "build.rs"
edition = "2018"
name = "Borlaug"
version = "0.0.1"

[profile.release]
panic = "unwind"

[[bin]]
name = "borlaug"
path = "src/main.rs"

[dependencies]
# third-party dependencies
codec = {package = "parity-scale-codec", version = "3.4.0"}
futures = {version = "0.3.9", features = ["compat"]}
hex = "0.4"
hex-literal = "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
log = "0.4.11"
parking_lot = "0.12.1"
serde = {version = "1.0.130", features = ["derive"]}

# primitives
sp-authority-discovery = "19.0.0"

# client dependencies
chrono = {version = "0.4.9", features = ["serde"]}
frame-support = "21.0.0"
sc-authority-discovery = "0.27.0"
sc-basic-authorship = "0.27.0"
sc-chain-spec = "20.0.0"
sc-cli = {version = "0.29.0"}
sc-client-api = "21.0.0"
sc-consensus = "0.26.0"
sc-consensus-aura = {version = "0.27.0", optional = true}
sc-consensus-babe = {version = "0.27.0", optional = true}
sc-consensus-babe-rpc = {version = "0.27.0", optional = true}
sc-consensus-epochs = "0.26.0"
sc-consensus-manual-seal = {version = "0.28.0", optional = true}
sc-consensus-slots = "0.26.0"
sc-executor = {version = "0.25.0"}
sc-finality-grandpa = "0.24.0"
sc-finality-grandpa-rpc = {version = "0.25.0", optional = true}
sc-keystore = "18.0.0"
sc-network = "0.27.0"
sc-rpc = "22.0.0"
sc-rpc-api = "0.26.0"
sc-service = {version = "0.28.0"}
sc-sync-state-rpc = "0.27.0"
sc-telemetry = "8.0.0"
sc-transaction-pool = "21.0.0"
serde_json = "1.0.41"
sp-api = "19.0.0"
sp-block-builder = "19.0.0"
sp-blockchain = "21.0.0"
sp-consensus = "0.25.0"
sp-consensus-aura = {version = "0.25.0", optional = true}
sp-consensus-babe = {version = "0.25.0", optional = true}
sp-core = "20.0.0"
sp-finality-grandpa = {version = "16.0.0", optional = true}
sp-inherents = "19.0.0"
sp-keystore = "0.26.0"
sp-runtime = "23.0.0"
sp-timestamp = {version = "19.0.0", optional = true}
sp-transaction-pool = "19.0.0"
structopt = "0.3.17"
substrate-frame-rpc-system = "21.0.0"

# frame dependencies
pallet-im-online = {version = "20.0.0", default-features = false}

# These dependencies are used for runtime benchmarking
frame-benchmarking = {default-features = false, version = "21.0.0"}
frame-benchmarking-cli = {version = "25.0.0"}

runtime = {package = "borlaug-runtime", path = "runtime", optional = true}

asset-registry-runtime-api = {path = "pallets/asset-registry-runtime-api"}
audits-runtime-api = {path = "pallets/audits-runtime-api"}
groups-runtime-api = {path = "pallets/groups-runtime-api"}
identity-runtime-api = {path = "pallets/identity-runtime-api"}
provenance-runtime-api = {path = "pallets/provenance-runtime-api"}
settings-runtime-api = {path = "pallets/settings-runtime-api"}

pallet-primitives = {path = "pallets/primitives", default-features = false}

pallet-transaction-payment-rpc = {path = "pallets/transaction-payment/rpc"}

# [dependencies.syn]
# features = ["full", "visit", "extra-traits"]
# version = "=1.0.81"

[build-dependencies]
pallet-transaction-payment = {path = "pallets/transaction-payment"}
substrate-build-script-utils = "5.0.0"
vergen = "8.1.1"

[workspace]
members = ["runtime", "pallets/*"]

[features]
default = []
# use grandpa / babe consensus (chain must not be stopped)
grandpa_babe = [
  "sp-consensus-babe",
  "sp-finality-grandpa",
  "sc-consensus-babe-rpc",
  "sc-consensus-babe",
  "sc-finality-grandpa-rpc",
  "runtime/grandpa_babe",
]
# use grandpa / aura consensus
grandpa_aura = [
  "sp-consensus-aura",
  "sp-finality-grandpa",
  "sc-consensus-aura",
  "sc-finality-grandpa-rpc",
  "runtime/grandpa_aura",
]
# use instant seal consensus - useful for development, but not to be used in production
instant_seal = [
  "sc-consensus-manual-seal",
  "sp-timestamp",
  "runtime/instant_seal",
]
runtime-benchmarks = [
  "runtime/runtime-benchmarks",
]
