[package]
authors = ["Borlaug"]
build = "build.rs"
edition = "2021"
name = "Borlaug"
version = "0.0.1"

[profile.release]
panic = "unwind"

[[bin]]
name = "borlaug"
path = "src/main.rs"

[dependencies]
# third-party dependencies
codec = {package = "parity-scale-codec", version = "3.4.0"}
futures = {version = "0.3.9", features = ["compat"]}
hex = "0.4"
hex-literal = "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
log = "0.4.11"
parking_lot = "0.12.1"
serde = {version = "1.0.130", features = ["derive"]}

# primitives
sp-authority-discovery = "4.0.0-dev"

# client dependencies
# sp-finality-grandpa = {version = "0.10.0-dev", optional = true}
sp-inherents = "4.0.0-dev"
sp-keystore = "0.13.0"
sp-runtime = "8.0.0"
sp-timestamp = {version = "4.0.0-dev", optional = true}
sp-transaction-pool = "4.0.0-dev"
structopt = "0.3.17"
substrate-frame-rpc-system = "4.0.0-dev"

# frame dependencies
pallet-im-online = {version = "4.0.0-dev", default-features = false}

# These dependencies are used for runtime benchmarking
frame-benchmarking = {default-features = false, version = "4.0.0-dev"}
frame-benchmarking-cli = {version = "4.0.0-dev", optional = true}

runtime = {package = "borlaug-runtime", path = "runtime", optional = true}

asset-registry-runtime-api = {path = "pallets/asset-registry-runtime-api"}
audits-runtime-api = {path = "pallets/audits-runtime-api"}
groups-runtime-api = {path = "pallets/groups-runtime-api"}
identity-runtime-api = {path = "pallets/identity-runtime-api"}
provenance-runtime-api = {path = "pallets/provenance-runtime-api"}
settings-runtime-api = {path = "pallets/settings-runtime-api"}

pallet-primitives = {path = "pallets/primitives", default-features = false}

# pallet-transaction-payment-rpc = {path = "pallets/transaction-payment/rpc"}
pallet-transaction-payment-rpc = {version = "4.0.0-dev"}

chrono = {version = "0.4.9", features = ["serde"]}
frame-support = "4.0.0-dev"
# node-inspect = {version = "0.8.0", optional = true}
node-executor = {version = "2.0.0"}
sc-authority-discovery = "0.10.0-dev"
sc-basic-authorship = "0.10.0-dev"
sc-chain-spec = "4.0.0-dev"
sc-cli = {version = "0.10.0-dev", optional = true}
sc-client-api = "4.0.0-dev"
sc-consensus = "0.10.0-dev"
sc-consensus-aura = {version = "0.10.0-dev", optional = true}
sc-consensus-babe = {version = "0.10.0-dev", optional = true}
sc-consensus-babe-rpc = {version = "0.10.0-dev", optional = true}
sc-consensus-epochs = "0.10.0-dev"
sc-consensus-grandpa = {version = "0.10.0-dev", optional = true}
sc-consensus-manual-seal = {version = "0.10.0-dev", optional = true}
sc-consensus-slots = "0.10.0-dev"
sc-executor = {version = "0.10.0-dev"}
sc-finality-grandpa = "0.10.0-dev"
sc-finality-grandpa-rpc = {version = "0.10.0-dev", optional = true}
sc-keystore = "4.0.0-dev"
sc-network = "0.10.0-dev"
sc-network-common = {version = "0.10.0-dev"}
sc-rpc = "4.0.0-dev"
sc-rpc-api = "0.10.0-dev"
sc-service = "0.10.0-dev"
sc-sync-state-rpc = "0.10.0-dev"
sc-telemetry = "4.0.0-dev"
sc-transaction-pool = "4.0.0-dev"
sc-transaction-pool-api = "4.0.0-dev"
serde_json = "1.0.41"
sp-api = "4.0.0-dev"
sp-block-builder = "4.0.0-dev"
sp-blockchain = "4.0.0-dev"
sp-consensus = "0.10.0-dev"
sp-consensus-aura = {version = "0.10.0-dev", optional = true}
sp-consensus-babe = {version = "0.10.0-dev", optional = true}
sp-consensus-grandpa = {version = "4.0.0-dev", optional = true}
sp-core = "8.0.0"
sp-keyring = {version = "7.0.0"}

[build-dependencies]
clap = {version = "4.0.9", optional = true}
clap_complete = {version = "4.0.2", optional = true}
frame-benchmarking-cli = {version = "4.0.0-dev", optional = true}
# node-inspect = {version = "0.8.0", optional = true}
pallet-transaction-payment-rpc = {version = "4.0.0-dev"}
sc-cli = {version = "0.10.0-dev", optional = true}
substrate-build-script-utils = {version = "3.0.0", optional = true}
substrate-frame-cli = {version = "4.0.0-dev", optional = true}
try-runtime-cli = {version = "0.10.0-dev", optional = true}
vergen = "8.1.1"

[workspace]
members = ["runtime", "pallets/*"]

[features]
cli = [
  # "node-inspect",
  "sc-cli",
  "frame-benchmarking-cli",
  "substrate-frame-cli",
  "sc-service/rocksdb",
  "clap",
  "clap_complete",
  "substrate-build-script-utils",
  "try-runtime-cli",
]
default = ["cli"]
# use grandpa / babe consensus (chain must not be stopped)
grandpa_babe = [
  "sp-consensus-babe", # "sp-finality-grandpa",
  "sc-consensus-babe-rpc",
  "sc-consensus-babe",
  "sc-consensus-grandpa",
  "sc-finality-grandpa-rpc",
  "sp-consensus-grandpa",
  "runtime/grandpa_babe",
  "sp-timestamp",
]
# use grandpa / aura consensus
grandpa_aura = [
  "sp-consensus-aura", # "sp-finality-grandpa",
  "sc-consensus-aura",
  "sc-consensus-grandpa",
  "sc-finality-grandpa-rpc",
  "sp-consensus-grandpa",
  "runtime/grandpa_aura",
  "sp-timestamp",
]
# use instant seal consensus - useful for development, but not to be used in production

instant_seal = [
  "sc-consensus-manual-seal",
  "sp-timestamp",
  "runtime/instant_seal",
]
runtime-benchmarks = [
  "runtime/runtime-benchmarks",
  "frame-benchmarking-cli/runtime-benchmarks",
]
