[package]
authors = ['Borlaug Blockchain']
edition = '2018'
name = 'borlaug-runtime'
version = '2.0.0'

[dependencies]
# third-party dependencies
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.101", optional = true, features = ["derive"]}

# primitives
parity-util-mem = {version = "0.9.0", default-features = false, features = ["primitive-types"]}
sp-io = {version = "3.0.0", default-features = false}

sp-api = {version = "3.0.0", default-features = false}
sp-application-crypto = {version = "3.0.0", default-features = false}
sp-authority-discovery = {version = "3.0.0", default-features = false}
sp-block-builder = {version = "3.0.0", default-features = false}
sp-consensus-babe = {version = "0.9.0", default-features = false}
sp-core = {version = "3.0.0", default-features = false}
sp-inherents = {version = "3.0.0", default-features = false}
sp-offchain = {version = "3.0.0", default-features = false}
sp-runtime = {version = "3.0.0", default-features = false}
sp-session = {version = "3.0.0", default-features = false}
sp-std = {version = "3.0.0", default-features = false}
sp-transaction-pool = {version = "3.0.0", default-features = false}
sp-version = {version = "3.0.0", default-features = false}

frame-executive = {version = "3.0.0", default-features = false}
frame-support = {version = "3.0.0", default-features = false}
frame-system = {version = "3.0.0", default-features = false}
frame-system-rpc-runtime-api = {version = "3.0.0", default-features = false}

pallet-authorship = {version = "3.0.0", default-features = false}
pallet-balances = {version = "3.0.0", default-features = false}
pallet-collective = {version = "3.0.0", default-features = false}
pallet-membership = {version = "3.0.0", default-features = false}
pallet-proxy = {version = "3.0.0", default-features = false}
pallet-randomness-collective-flip = {version = "3.0.0", default-features = false}
pallet-sudo = {version = "3.0.0", default-features = false}
pallet-timestamp = {version = "3.0.0", default-features = false}

pallet-treasury = {version = "3.0.0", default-features = false}

# grandpa/babe dependencies

sp-staking = {version = "3.0.0", default-features = false, optional = true}

pallet-authority-discovery = {version = "3.0.0", default-features = false, optional = true}
pallet-babe = {version = "3.0.0", default-features = false, optional = true}
pallet-grandpa = {version = "3.0.0", default-features = false, optional = true}
pallet-im-online = {version = "3.0.0", default-features = false, optional = true}
pallet-offences = {version = "3.0.0", default-features = false, optional = true}
pallet-session = {version = "3.0.0", default-features = false, optional = true}
pallet-staking = {version = "3.0.0", default-features = false, optional = true}
pallet-staking-reward-curve = {version = "3.0.0", default-features = false, optional = true}

# Used for runtime benchmarking
frame-benchmarking = {version = "3.1.0", default-features = false, optional = true}
frame-system-benchmarking = {version = "3.0.0", default-features = false, optional = true}
hex-literal = {version = "0.3.1", optional = true}

# Borlaug Dependencies
asset-registry = {package = "pallet-asset-registry", path = "../pallets/asset-registry", default-features = false}
asset-registry-runtime-api = {path = "../pallets/asset-registry-runtime-api", default-features = false}
audits = {package = "pallet-audits", path = "../pallets/audits", default-features = false}
audits-runtime-api = {path = "../pallets/audits-runtime-api", default-features = false}
groups = {package = "pallet-groups", path = "../pallets/groups", default-features = false}
groups-runtime-api = {path = "../pallets/groups-runtime-api", default-features = false}
identity = {package = "pallet-identity", path = "../pallets/identity", default-features = false}
identity-runtime-api = {path = "../pallets/identity-runtime-api", default-features = false}
pallet-primitives = {package = "pallet-primitives", path = "../pallets/primitives", default-features = false}
provenance = {package = "pallet-provenance", path = "../pallets/provenance", default-features = false}
provenance-runtime-api = {path = "../pallets/provenance-runtime-api", default-features = false}
settings = {package = "pallet-settings", path = "../pallets/settings", default-features = false}
settings-runtime-api = {path = "../pallets/settings-runtime-api", default-features = false}

pallet-transaction-payment = {path = "../pallets/transaction-payment", default-features = false}
pallet-transaction-payment-rpc-runtime-api = {path = "../pallets/transaction-payment/rpc/runtime-api", default-features = false}

[build-dependencies]
substrate-wasm-builder = "4.0.0"

[features]
default = ["std"]
no_std = []
std = [
  "parity-util-mem/std",
  "sp-io/std",
  "sp-authority-discovery/std",
  "pallet-authority-discovery/std",
  "codec/std",
  "sp-std/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-version/std",
  "sp-staking/std",
  "serde",
  "sp-offchain/std",
  "sp-session/std",
  "sp-transaction-pool/std",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-inherents/std",
  "sp-consensus-babe/std",
  "sp-application-crypto/std",
  "frame-system/std",
  "frame-support/std",
  "frame-executive/std",
  "pallet-balances/std",
  "pallet-authorship/std",
  "pallet-im-online/std",
  "pallet-collective/std",
  "pallet-membership/std",
  "pallet-timestamp/std",
  "pallet-sudo/std",
  "pallet-transaction-payment/std",
  "pallet-randomness-collective-flip/std",
  "pallet-session/std",
  "pallet-staking/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-treasury/std",
  "pallet-offences/std",
  "frame-system-rpc-runtime-api/std",
  "identity/std",
  "settings/std",
  "asset-registry/std",
  "audits/std",
  "audits-runtime-api/std",
  "asset-registry-runtime-api/std",
  "groups/std",
  "groups-runtime-api/std",
  "provenance-runtime-api/std",
  "settings-runtime-api/std",
  "provenance/std",
  "pallet-babe/std",
  "pallet-grandpa/std",
  "pallet-proxy/std",
]

grandpa_babe = [
  "pallet-babe",
  "pallet-grandpa",
  "pallet-session",
  "pallet-offences",
  "sp-staking",
  "pallet-staking",
  "pallet-staking-reward-curve",
  "pallet-im-online",
  "pallet-authority-discovery",
]
instant_seal = []

runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system-benchmarking",
  "frame-system/runtime-benchmarks",
  "hex-literal",
  "pallet-balances/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "identity/runtime-benchmarks",
  "settings/runtime-benchmarks",
  "asset-registry/runtime-benchmarks",
  "audits/runtime-benchmarks",
  "groups/runtime-benchmarks",
  "provenance/runtime-benchmarks",
]
