[package]
authors = ["Borlaug Blockchain"]
edition = "2021"
name = "borlaug-runtime"
version = "2.0.0"

[dependencies]
# third-party dependencies
codec = {package = "parity-scale-codec", version = "3.4.0", default-features = false}
scale-info = {version = "2.5.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.101", optional = true, features = ["derive"]}

sp-api = {version = "19.0.0-dev", default-features = false}
sp-application-crypto = {version = "22.0.0", default-features = false}
sp-authority-discovery = {version = "19.0.0", default-features = false}
sp-block-builder = {version = "19.0.0", default-features = false}
sp-core = {version = "20.0.0", default-features = false}
sp-inherents = {version = "19.0.0", default-features = false}
sp-offchain = {version = "19.0.0", default-features = false}
sp-runtime = {version = "23.0.0", default-features = false}
sp-session = {version = "20.0.0", default-features = false}
sp-std = {version = "7.0.0", default-features = false}
sp-transaction-pool = {version = "19.0.0", default-features = false}
sp-version = {version = "21.0.0", default-features = false}

frame-executive = {version = "21.0.0", default-features = false}
frame-support = {version = "21.0.0", default-features = false}
frame-system = {version = "21.0.0", default-features = false}
frame-system-rpc-runtime-api = {version = "19.0.0", default-features = false}

pallet-authorship = {version = "21.0.0", default-features = false}
pallet-balances = {version = "21.0.0", default-features = false}
pallet-collective = {version = "21.0.0", default-features = false}
pallet-insecure-randomness-collective-flip = {version = "9.0.0", default-features = false}
pallet-membership = {version = "21.0.0", default-features = false}
pallet-proxy = {version = "21.0.0", default-features = false}
pallet-sudo = {version = "21.0.0", default-features = false}
pallet-timestamp = {version = "20.0.0", default-features = false}

pallet-treasury = {version = "20.0.0", default-features = false}

# grandpa/babe/aura dependencies

pallet-aura = {version = "20.0.0", default-features = false, optional = true}
pallet-authority-discovery = {version = "21.0.0", default-features = false, optional = true}
pallet-babe = {version = "21.0.0", default-features = false, optional = true}
pallet-grandpa = {version = "21.0.0", default-features = false, optional = true}
pallet-im-online = {version = "20.0.0", default-features = false, optional = true}
pallet-offences = {version = "20.0.0", default-features = false, optional = true}
pallet-session = {version = "21.0.0", default-features = false, optional = true}
pallet-staking = {version = "21.0.0", default-features = false, optional = true}
pallet-staking-reward-curve = {version = "6.0.0", default-features = false, optional = true}
sp-consensus-aura = {version = "0.25.0", default-features = false, optional = true}
sp-consensus-babe = {version = "0.25.0", default-features = false, optional = true}
sp-staking = {version = "19.0.0", default-features = false, optional = true}

# Used for runtime benchmarking
frame-benchmarking = {version = "21.0.0", default-features = false, optional = true}
frame-system-benchmarking = {version = "21.0.0", default-features = false, optional = true}
hex-literal = {version = "0.4.1", optional = true}

# Borlaug Dependencies
asset-registry = {package = "pallet-asset-registry", path = "../pallets/asset-registry", default-features = false}
asset-registry-runtime-api = {path = "../pallets/asset-registry-runtime-api", default-features = false}
audits = {package = "pallet-audits", path = "../pallets/audits", default-features = false}
audits-runtime-api = {path = "../pallets/audits-runtime-api", default-features = false}
groups = {package = "pallet-groups", path = "../pallets/groups", default-features = false}
groups-runtime-api = {path = "../pallets/groups-runtime-api", default-features = false}
identity = {package = "pallet-identity", path = "../pallets/identity", default-features = false}
identity-runtime-api = {path = "../pallets/identity-runtime-api", default-features = false}
log = "0.4.17"
pallet-primitives = {package = "pallet-primitives", path = "../pallets/primitives", default-features = false}
provenance = {package = "pallet-provenance", path = "../pallets/provenance", default-features = false}
provenance-runtime-api = {path = "../pallets/provenance-runtime-api", default-features = false}
settings = {package = "pallet-settings", path = "../pallets/settings", default-features = false}
settings-runtime-api = {path = "../pallets/settings-runtime-api", default-features = false}

# substrate-validator-set = {path = "../pallets/substrate-validator-set", default-features = false, optional = true}

pallet-transaction-payment = {version = "21.0.0", default-features = false, optional = true}
pallet-transaction-payment-rpc-runtime-api = {version = "21.0.0", default-features = false, optional = true}

# pallet-transaction-payment = {path = "../pallets/transaction-payment", default-features = false}
# pallet-transaction-payment-rpc-runtime-api = {path = "../pallets/transaction-payment/rpc/runtime-api", default-features = false}

[build-dependencies]
substrate-wasm-builder = "10.0.0"

[features]
default = ["std"]
no_std = []
std = [
  "sp-authority-discovery/std",
  "pallet-authority-discovery/std",
  "codec/std",
  "sp-std/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-version/std",
  "sp-staking/std",
  "serde",
  "sp-offchain/std",
  "sp-session/std",
  "sp-transaction-pool/std",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-inherents/std",
  "sp-consensus-babe/std",
  "sp-application-crypto/std",
  "frame-system/std",
  "frame-support/std",
  "frame-executive/std",
  "pallet-balances/std",
  "pallet-authorship/std",
  "pallet-im-online/std",
  "pallet-collective/std",
  "pallet-membership/std",
  "pallet-timestamp/std",
  "pallet-sudo/std",
  "pallet-transaction-payment/std",
  "pallet-insecure-randomness-collective-flip/std",
  "pallet-session/std",
  "pallet-staking/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-treasury/std",
  "pallet-offences/std",
  "frame-system-rpc-runtime-api/std",
  "identity/std",
  "settings/std",
  "asset-registry/std",
  "audits/std",
  "audits-runtime-api/std",
  "asset-registry-runtime-api/std",
  "groups/std",
  "groups-runtime-api/std",
  "provenance-runtime-api/std",
  "settings-runtime-api/std",
  "provenance/std",
  "pallet-babe/std",
  "pallet-aura/std",
  "pallet-grandpa/std",
  "pallet-proxy/std", # "sp-consensus-grandpa/std",  # "substrate-validator-set/std",
]

grandpa_aura = [
  "pallet-aura",
  "pallet-grandpa",
  "pallet-session",
  "pallet-im-online",
  "pallet-authority-discovery",
  "sp-consensus-aura", # "sp-consensus-grandpa",  # "substrate-validator-set",
]
grandpa_babe = [
  "pallet-babe",
  "pallet-grandpa",
  "pallet-session",
  "pallet-offences",
  "sp-staking",
  "pallet-staking",
  "pallet-staking-reward-curve",
  "pallet-im-online",
  "pallet-authority-discovery",
  "sp-consensus-babe", # "sp-consensus-grandpa",
]
instant_seal = []

runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system-benchmarking",
  "frame-system/runtime-benchmarks",
  "hex-literal",
  "pallet-balances/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "identity/runtime-benchmarks",
  "settings/runtime-benchmarks",
  "asset-registry/runtime-benchmarks",
  "audits/runtime-benchmarks",
  "groups/runtime-benchmarks",
  "provenance/runtime-benchmarks",
]
