[package]
name = "pallet-asset-registry"
version = "0.1.0"
authors = ["Borlaug Blockchain"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false }

sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = '45b9f0a9cbf901abaa9f1fca5fe8baeed029133d', default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = '45b9f0a9cbf901abaa9f1fca5fe8baeed029133d', default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", rev = '45b9f0a9cbf901abaa9f1fca5fe8baeed029133d', default-features = false }
sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate.git", rev = '45b9f0a9cbf901abaa9f1fca5fe8baeed029133d', default-features = false }
randomness = { package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate.git", rev = '45b9f0a9cbf901abaa9f1fca5fe8baeed029133d', default-features = false }
balances = { package = "pallet-balances", git = "https://github.com/paritytech/substrate.git", rev = '45b9f0a9cbf901abaa9f1fca5fe8baeed029133d', default-features = false }
timestamp = { package = "pallet-timestamp", git = "https://github.com/paritytech/substrate.git", rev = '45b9f0a9cbf901abaa9f1fca5fe8baeed029133d', default-features = false }

frame-system = { git = "https://github.com/paritytech/substrate.git", rev = '45b9f0a9cbf901abaa9f1fca5fe8baeed029133d', default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", rev = '45b9f0a9cbf901abaa9f1fca5fe8baeed029133d', default-features = false }

primitives = { package = "pallet-primitives", path = "../primitives" , default-features = false}
identity = { package = "pallet-identity", path = "../identity", default-features = false }

[dev-dependencies]
lazy_static = "1.4.0"
parking_lot = "0.10.0"
chrono = "0.4"


[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    "sp-io/std",
    "sp-std/std",
    "balances/std",
	"frame-support/std",
    'frame-system/std',
    'sp-runtime/std',
    'randomness/std',
	"timestamp/std",
	"primitives/std",
	"identity/std",
]