[package]
authors = ["Borlaug Blockchain"]
edition = "2018"
name = "pallet-asset-registry"
version = "0.1.0"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
frame-benchmarking = {default-features = false, version = "3.1.0", optional = true}
frame-support = {version = "3.0.0", default-features = false}
frame-system = {version = "3.0.0", default-features = false}
randomness = {package = "pallet-randomness-collective-flip", version = "3.0.0", default-features = false}
sp-runtime = {version = "3.0.0", default-features = false}
sp-std = {package = "sp-std", version = "3.0.0", default-features = false}
timestamp = {package = "pallet-timestamp", version = "3.0.0", default-features = false}

extrinsic-extra = {path = "../../traits/extrinsic_extra", default-features = false}
groups = {package = "pallet-groups", path = "../groups", default-features = false}
identity = {package = "pallet-identity", path = "../identity", default-features = false}
primitives = {package = "pallet-primitives", path = "../primitives", default-features = false}

[dev-dependencies]
chrono = "0.4"
pallet-balances = "3.0.0"
serde = "1.0"
settings = {package = "pallet-settings", path = "../settings", default-features = false}
sp-core = {version = "3.0.0", default-features = false}
sp-io = {version = "3.0.0", default-features = false}

[features]
default = ['std']
runtime-benchmarks = ["frame-benchmarking"]
std = [
  'codec/std',
  "sp-std/std",
  "frame-support/std",
  'frame-system/std',
  'sp-runtime/std',
  'randomness/std',
  "timestamp/std",
  "primitives/std",
  "groups/std",
  "identity/std",
  "extrinsic-extra/std",
]
