[package]
authors = ["Borlaug Blockchain"]
edition = "2021"
name = "pallet-asset-registry"
version = "0.1.0"

[dependencies]
codec = {package = "parity-scale-codec", version = "3.4.0", default-features = false}
frame-benchmarking = {default-features = false, version = "21.0.0", optional = true}
frame-support = {version = "21.0.0", default-features = false}
frame-system = {version = "21.0.0", default-features = false}
scale-info = {version = "2.5.0", default-features = false, features = ["derive"]}
sp-runtime = {version = "23.0.0", default-features = false}
sp-std = {package = "sp-std", version = "7.0.0", default-features = false}
timestamp = {package = "pallet-timestamp", version = "20.0.0", default-features = false}

extrinsic-extra = {path = "../../traits/extrinsic_extra", default-features = false}
groups = {package = "pallet-groups", path = "../groups", default-features = false}
identity = {package = "pallet-identity", path = "../identity", default-features = false}
primitives = {package = "pallet-primitives", path = "../primitives", default-features = false}

[dev-dependencies]
chrono = "0.4"
pallet-balances = {version = "21.0.0", default-features = false}
runtime = {package = "borlaug-runtime", path = "../../runtime", default-features = false}
serde = {version = "1.0.130", default-features = false}
settings = {package = "pallet-settings", path = "../settings", default-features = false}
sp-core = {version = "20.0.0", default-features = false}

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
  "codec/std",
  "sp-std/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "timestamp/std",
  "primitives/std",
  "groups/std",
  "identity/std",
  "extrinsic-extra/std",
]
