[package]
authors = ["Borlaug"]
edition = "2018"
name = "audits-runtime-api"
version = "0.0.1"

[dependencies]
codec = {package = "parity-scale-codec", version = "2.3.1", default-features = false}
frame-support = {version = "3.0.0", default-features = false}
primitives = {package = "pallet-primitives", path = "../primitives", default-features = false}
sp-api = {version = "3.0", default-features = false}

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-api/std",
]
