[package]
name = "pallet-audits"
version = "0.1.0"
authors = ["Borlaug Blockchain"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false }

sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = '3fe22edd5b0fb17dd51532ed53b12dc82d6785fa', default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = '3fe22edd5b0fb17dd51532ed53b12dc82d6785fa', default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", rev = '3fe22edd5b0fb17dd51532ed53b12dc82d6785fa', default-features = false }
sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate.git", rev = '3fe22edd5b0fb17dd51532ed53b12dc82d6785fa', default-features = false }
randomness = { package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate.git", rev = '3fe22edd5b0fb17dd51532ed53b12dc82d6785fa', default-features = false }
balances = { package = "pallet-balances", git = "https://github.com/paritytech/substrate.git", rev = '3fe22edd5b0fb17dd51532ed53b12dc82d6785fa', default-features = false }
timestamp = { package = "pallet-timestamp", git = "https://github.com/paritytech/substrate.git", rev = '3fe22edd5b0fb17dd51532ed53b12dc82d6785fa', default-features = false }

frame-system = { git = "https://github.com/paritytech/substrate.git", rev = '3fe22edd5b0fb17dd51532ed53b12dc82d6785fa', default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", rev = '3fe22edd5b0fb17dd51532ed53b12dc82d6785fa', default-features = false }

primitives = { package = "pallet-primitives", path = "../primitives" , default-features = false}

[dev-dependencies]
lazy_static = "1.4.0"
parking_lot = "0.10.0"
chrono = "0.4"


[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    "sp-io/std",
    "sp-std/std",
    "balances/std",
	"frame-support/std",
    'frame-system/std',
    'sp-runtime/std',
    'randomness/std',
	"timestamp/std",
	"primitives/std",
]